--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -32,12 +32,19 @@ img {
 body {
   background-image: url("assets/images/city_hall.jpg");
   background-size: cover;
-  font-family: 'Karla', sans-serif;
+  font-family: 'Times New Roman', Times, serif;
+}
+
+h3{
+  text-align: center;
+  color:black;
+  font-weight:bold;
+  font-size:30px;
 }
 
 h1 {
   text-align: center;
-  color: white;
+  color: red;
   font-weight: bolder;
   padding: 20px;
   font-size: 45px;
@@ -46,7 +53,7 @@ h1 {
 p {
   margin: 10px;
   font-weight: bold;
-  color: red;
+  color: black;
   font-size: 20px;
 }
 
